refactor: 파일 폴더링 구조 변경

--- a/SignalRChatApp/SignalRChatApp/ChatRoom/Base.lproj/Main.storyboard
+++ b/SignalRChatApp/SignalRChatApp/ChatRoom/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2eU-N1-Ygh">
                                 <rect key="frame" x="20" y="772" width="353" height="60"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Message" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="l9P-VY-zti">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="l9P-VY-zti">
                                         <rect key="frame" x="0.0" y="0.0" width="278" height="60"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -34,6 +34,9 @@
                                         <rect key="frame" x="278" y="0.0" width="75" height="60"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="sendButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7F9-JV-TXD"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
